--- a/examples/style.css
+++ b/examples/style.css
@@ -1,45 +1,106 @@
-/* Overview Benefits */
-
-.overview-benefits {
-	display: grid;
-	gap: 1rem;
+.gallery_page {
 }
 
-.overview-benefits .overview-benefits__card h4 {
-	margin: 1rem 0;
-	letter-spacing: 0.05em;
-	font-weight: 400;
-	color: black;
-	font-size: 1rem;
+.gallery_page .container {
 }
 
-.overview-benefits .overview-benefits__card p {
-	font-size: .5rem;
-	letter-spacing: 0;
-	margin: 0;
+.gallery_page .gallery-tab {
+	margin-right: 4rem;
+	cursor: pointer;
+	list-style: none;
+	color: #76797e;
 }
 
-.overview-benefits .overview-benefits__card a:hover {
-	color: #0645AD;
+.gallery_page .gallery-tab:last-child {
+	margin-right: 0;
 }
 
-@media screen and (min-width: 768px) {
-	.overview-benefits {
-		grid-template-columns: repeat(2, 1fr);
-		font-size: 1.25rem;
+.gallery-tab.active {
+	color: #2bbcbe;
+	position: relative;
+}
+
+.gallery-tab.active:after {
+	content: '';
+	position: absolute;
+	bottom: -5px;
+	left: 0;
+	right: 0;
+	background: #2bbcbe;
+	height: 3px;
+	border-radius: 2px;
+}
+
+/* Gallery Modal */
+
+.gallery-image-container.show {
+	display: block;
+}
+
+.gallery-image-container.remove {
+	display: none;
+}
+
+.gallery-modal {
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity 0.3s;
+	position: fixed;
+	top: 50px;
+	left: 0;
+	right: 0;
+	width: 900px;
+	max-width: 100%;
+	margin: 0 auto;
+	border-radius: 4px;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+}
+
+.gallery-modal-btn {
+	width: 100%;
+	height: 350px;
+}
+
+.modal-close-btn {
+	position: absolute;
+	right: 16px;
+	font-size: 50px;
+	color: white;
+}
+
+.gallery-modal-overlay {
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity 0.3s;
+	position: fixed;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.juniors-first-image {
+	object-position: -200px 50%;
+}
+
+/** JS */
+.gallery_page .is-visible {
+	opacity: 1;
+	pointer-events: auto;
+}
+
+@media only screen and (max-width: 1024px) {
+	.gallery_page .gallery-tab {
+		margin-right: 2rem;
 	}
 
-	.overview-benefits .overview-benefits__card h4 {
-		font-size: 1.25rem;
-	}
-
-	.overview-benefits .overview-benefits__card p {
-		font-size: .875rem;
+	.gallery-modal {
+		max-width: 700px;
 	}
 }
 
-@media screen and (min-width: 1024px) {
-	.overview-benefits {
-		grid-template-columns: repeat(3, 1fr);
+@media only screen and (max-width: 600px) {
+	.gallery_page .gallery-tab {
+		margin-right: 1rem;
 	}
 }
